cmake_minimum_required(VERSION 3.26)
project(BTH3)

set(CMAKE_CXX_STANDARD 23)

add_executable(BTH3_BT01 BTH3_BT01.cpp)
add_executable(BTH3_BT02 BTH3_BT02.cpp)
add_executable(BTH3_BT03 BTH3_BT03.cpp)
add_executable(BTH3_BT04 BTH3_BT04.cpp)
add_executable(BTH3_BT05 BTH3_BT05.cpp)
add_executable(BTH3_BT06 BTH3_BT06.cpp)
add_executable(BTH3_BT07 BTH3_BT07.cpp)
add_executable(BTH3_BT08 BTH3_BT08.cpp)
add_executable(BTH3_BT09 BTH3_BT09.cpp)
add_executable(BTH3_BT10 BTH3_BT10.cpp)
add_executable(BTH3_BT11 BTH3_BT11.cpp)
add_executable(BTH3_BT12 BTH3_BT12.cpp)
add_executable(BTH3_BT13 BTH3_BT13.cpp)
add_executable(BTH3_BT14 BTH3_BT14.cpp)
add_executable(BTH3_BT15 BTH3_BT15.cpp)