cmake_minimum_required(VERSION 3.26)
project(BTH8)

set(CMAKE_CXX_STANDARD 17)

add_executable(BTH8_BT01 BTH8_BT01.cpp)
add_executable(BTH8_BT02 BTH8_BT02.cpp)
add_executable(BTH8_BT03 BTH8_BT03.cpp)
add_executable(BTH8_BT04 BTH8_BT04.cpp)
add_executable(BTH8_BT05 BTH8_BT05.cpp)
add_executable(BTH8_BT06 BTH8_BT06.cpp)
add_executable(BTH8_BT07 BTH8_BT07.cpp)
add_executable(BTH8_BT09 BTH8_BT09.cpp)